--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,27 @@
     <title>Can-It-WFC</title>
   </head>
   <body>
+    <script>
+      (function () {
+        var l = window.location;
+        if (l.search) {
+          var params = new URLSearchParams(l.search);
+          var p = params.get('p');
+          if (p) {
+            var q = params.get('q');
+            var h = params.get('h');
+            var newPath = p;
+            if (q) {
+              newPath += '?' + q.replace(/~and~/g, '&');
+            }
+            if (h) {
+              newPath += '#' + h;
+            }
+            window.history.replaceState(null, null, newPath);
+          }
+        }
+      })();
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
