--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/can-it-wfc/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Can-It-WFC - Find the best cafes for Work From Cafe"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/can-it-wfc/logo192.png" />
+    <link rel="manifest" href="/can-it-wfc/manifest.json" />
     <title>Can-It-WFC</title>
   </head>
   <body>
@@ -26,11 +26,13 @@
         var q = params.get('q');
         var h = params.get('h');
 
-        var base = l.pathname
-          .replace(/\/index\.html$/, '')
-          .replace(/\/$/, '');
+        var base = (l.pathname.replace(/\/index\.html$/, '') || '/can-it-wfc');
+        if (!base.endsWith('/')) {
+          base += '/';
+        }
 
-        var newPath = base + (p.startsWith('/') ? p : '/' + p);
+        var cleanP = p.startsWith('/') ? p.substring(1) : p;
+        var newPath = base + cleanP;
         if (q) {
           newPath += '?' + q.replace(/~and~/g, '&');
         }
